fix(i/phone): Fix spacing in forwarding call preferences (#4302)

--- a/src/pages/settings/yourProfile/components/ForwardingCallsPreferences.less
+++ b/src/pages/settings/yourProfile/components/ForwardingCallsPreferences.less
@@ -1,4 +1,8 @@
 :local {
+    .forwardingPhoneNumber {
+        padding-top: 4px;
+    }
+
     .forwardWhenOffline {
         margin-top: 20px;
     }
